regression/fail/special-ids.2.sml
local
fun f op= () = ()
fun op= () = ()
val rec f = fn op= => fn () => ()
val rec op= = fn () => ()
in end
